2003-09-13  Eduardo Garcia Cebollero <kiwnix@yahoo.es>

	* *.pl.in, *-conf.in, configure.in, Makefile.am, Makefile.in:
	  [build_system_switch] Update the sustitution system used in the
	  Makefiles for using Autoconf.
	* system-tools-backends.pc.in : Added file (independant info for
	  use if you want to know data about the backends)
	* autogen.sh: made it able to compile the backends independently of
	  the frontends

2003-09-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in (del_user): made it not to delete the deleted user's
	  home, it's a more safe default

2003-09-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot.pl.in (gst_boot_get_entry_parse_table): pass the correct
	  parameters to gst_boot_grub_parse_initrd (), fixes bug #121744

2003-08-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in (gst_boot_grub_linux2grub)
	(gst_boot_grub_grub2linux): added some rude guessing if
	the device doesn't exist in devices.map, anyways, this may still
	fail under certain circumstances, but this is unavoidable :-(

2003-08-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
        * Release 0.27.0

2003-08-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Makefile.am: fixed, now it passes distcheck

2003-08-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in: (gst_boot_grub_edit_entry): removed, no longer
	  neccesary, now boot-conf only deletes and adds entries. 
	  Added support for Hurd. 
	  (gst_boot_grub_entry_is_valid): added.
	  (gst_boot_grub_entries_set): made it to ignore the entries it can't
	  understand.
	* boot.pl.in: added support for grub, made it to ignore the entries it
	  can't understand.

2003-08-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* services.pl.in: added verbose runlevel description

2003-08-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Makefile.am: removed some unused backends from installing, removed
	  runlevel-conf.in and added services-conf.in