@@ -61,6 +61,7 @@ sub gst_service_sysv_get_paths
 
        "mandrake-7.1" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        "mandrake-7.2" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
+       "mandrake-9.0" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        "mandrake-9.1" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
 
        "debian-2.2"   => ["$gst_prefix/etc", "$gst_prefix/etc/init.d", "../init.d"],
@@ -99,6 +100,7 @@ sub gst_service_sysv_get_runlevels
 
        "mandrake-7.1"   => [3, 5],
        "mandrake-7.2"   => [3, 5],
+       "mandrake-9.0"   => [3, 5],
        "mandrake-9.1"   => [3, 5],
 
        "debian-2.2"     => [2, 3],
@@ -136,6 +138,7 @@ sub gst_service_get_verbose_runlevels
      
      "mandrake-7.1"   => "redhat-5.2",
      "mandrake-7.2"   => "redhat-5.2",
+     "mandrake-9.0"   => "redhat-5.2",
      "mandrake-9.1"   => "redhat-5.2",
      
      "debian-2.2"     => "debian-2.2",
